# flash-green-poc

./: .dockerignore  .env.example  .flake8  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  docker‑compose.yml  env.production.example  env.staging.example  pyproject.toml  requirements.txt  requirments.txt
.github/workflows/: ci.yml
Data/: ice_baseload_q2_2024.csv
Hardhat/: hardhat.config.js  package-lock.json  package.json
Hardhat/Scripts/: Deploy.js
Hardhat/artifacts/contracts/FlashLoan.sol/: FlashLoan.json  IFlashLoanReceiver.dbg.json  IFlashLoanReceiver.json
Hardhat/artifacts/contracts/TestReceiver.sol/: TestReceiver.json
Hardhat/cache/: solidity-files-cache.json
Hardhat/contracts/: FlashLoan.sol  TestReceiver.sol
app/: __init__.py  config.py  db.py  exchange.py  exchange_ice.py  exchange_powerledger.py  exchange_repo.py  feed.py  loan.py  loan_repo.py  loan_web3.py  logger.py  metrics.py  orchestrator.py  orderbook.py  storage.py  strategy.py  web.py
app/feeds/: __init__.py  base.py  bmrs_csv.py  bmrs_rest.py  ice_csv.py  ice_rest.py
app/static/: ui.html
data/: bmrs_spot_uk_2024.csv
docs/: deployment.md  runbook.md
flash-green-poc/google-cloud-sdk/.install/: gcloud-crc32c-darwin-x86_64.snapshot.json
infra/: alerts.yml  grafana-dashboard.yml  prometheus.py  prometheus.yml
infra/dashboards/: flash-green.json
migrations/: env.py
migrations/versions/: 0001_create_trades_orders.py
scripts/: entrypoint.sh  preflight_check.py  start_macos.sh
test/: test_spread.py
tests/: conftest.py  test_api.py  test_config.py  test_depth_exchange.py  test_feeds.py  test_logger_smoke.py  test_orchestrator.py  test_orderbook.py  test_risk.py  test_spread.py  test_storage.py
