###############################################################################
#  pyproject.toml — flash‑green‑poc
#  Works with Poetry 1.4 → 1.8+
###############################################################################


############################
# 1.  Poetry‑specific block
############################
[tool.poetry]            # <-- Poetry still looks here first
name        = "flash-green-poc"
version     = "0.1.0"
description = "Proof‑of‑concept flash‑loan energy‑vs‑futures arbitrage bot"
authors     = ["Your Name <you@example.com>"]
packages    = [{ include = "app" }]

[tool.poetry.dependencies]
python            = "^3.11"
aiohttp           = "^3.9"
pydantic          = "^2.6"
pydantic-settings = "^2.1"
prometheus-client = "^0.20"
numpy             = "^1.26"
pandas            = "^2.2"
numba             = "^0.59"
rich              = "^13.7"
web3              = { version = "^6.15", optional = true }
python-dotenv     = { version = "^1.0", optional = true }
uvicorn = "^0.34.1"
fastapi = "^0.115.12"
httpx    = "^0.24"
ccxt = "^4.4.91"
requests = "^2.31.0"


[tool.poetry.group.test.dependencies]
pytest     = "^8.1"
hypothesis = "^6.98"

[tool.poetry.extras]
hardhat = ["web3", "python-dotenv"]

############################
# 3.  Build system hook
############################
[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

